Added UncontrollableDevices class to simulate the uncontrollable load in a House.

--- a/tactiletriana/pom.xml
+++ b/tactiletriana/pom.xml
@@ -25,6 +25,11 @@
             <version>1.10.19</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
