--- a/tactiletriana/pom.xml
+++ b/tactiletriana/pom.xml
@@ -7,12 +7,6 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>nl.utwente.cs.caes</groupId>
-            <artifactId>tactile</artifactId>
-            <version>0.1</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
@@ -29,6 +23,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
             <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>tactilefx</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
     <build>
