MIN_DATE en MAX_DATE zijn nu ook naar de SimulationConfig verplaatst

--- a/tactiletriana/tactiletriana.config
+++ b/tactiletriana/tactiletriana.config
@@ -1,7 +1,9 @@
-#Wed May 20 12:39:49 CEST 2015
-testValue2=abcdefg
-SIMULATION_UNCONTROLABLE_LOAD_ENABLED=true
+#Wed May 20 13:08:27 CEST 2015
 HOUSE_MAX_FUSE_CURRENT=105
+SIMULATION_UNCONTROLABLE_LOAD_ENABLED=true
+testValue2=abcdefg
 TICK_MINUTES=5
 SYSTEM_TICK_TIME=200
+MIN_DATE=2014-01-01
 testValue=12345
+MAX_DATE=2014-12-31
