--- a/tactiletriana/tactiletriana.config
+++ b/tactiletriana/tactiletriana.config
@@ -1,9 +1,10 @@
-#Wed May 20 13:08:27 CEST 2015
+#Wed May 20 14:03:08 CEST 2015
+SYSTEM_TICK_TIME=200
 HOUSE_MAX_FUSE_CURRENT=105
+timescenario=2014-01-01T00\:00,2014-07-08T23\:59\:59.999999999|2014-12-02T00\:00,2014-12-31T23\:59\:59.999999999|
+MAX_DATE=2014-12-31
 SIMULATION_UNCONTROLABLE_LOAD_ENABLED=true
 testValue2=abcdefg
-TICK_MINUTES=5
-SYSTEM_TICK_TIME=200
 MIN_DATE=2014-01-01
 testValue=12345
-MAX_DATE=2014-12-31
+TICK_MINUTES=5
