Eerste versie geanimeerde kabels

--- a/tactiletriana/tactiletriana.config
+++ b/tactiletriana/tactiletriana.config
@@ -1,7 +1,8 @@
-SYSTEM_TICK_TIME=200
+#Sun May 24 11:09:57 CEST 2015
 HOUSE_MAX_FUSE_CURRENT=105
-timescenario=2014-01-01T00\:00,2014-07-08T23\:59\:59.999999999|2014-12-02T00\:00,2014-12-31T23\:59\:59.999999999|
 SIMULATION_UNCONTROLABLE_LOAD_ENABLED=true
 testValue2=abcdefg
-testValue=12345
+timescenario=2014-01-01T00\:00,2014-07-08T23\:59\:59.999999999|2014-12-02T00\:00,2014-12-31T23\:59\:59.999999999|
 TICK_MINUTES=5
+SYSTEM_TICK_TIME=200
+testValue=12345
