--- a/tactiletriana/tactiletriana.config
+++ b/tactiletriana/tactiletriana.config
@@ -1,8 +1,8 @@
-#Mon May 25 19:16:25 CEST 2015
-testValue2=abcdefg
-SIMULATION_UNCONTROLABLE_LOAD_ENABLED=true
+#Mon May 25 20:37:14 CEST 2015
 HOUSE_MAX_FUSE_CURRENT=105
-timescenario=2014-01-01T00\:00,2014-07-08T23\:59\:59.999999999|2014-12-02T00\:00,2014-12-31T23\:59\:59.999999999|
+SIMULATION_UNCONTROLABLE_LOAD_ENABLED=true
+testValue2=abcdefg
+timescenario=2014-01-01,2014-01-01|2014-06-01,2014-12-31|
 TICK_MINUTES=5
 SYSTEM_TICK_TIME=200
 testValue=12345
