--- a/tactiletriana/tactiletriana.config
+++ b/tactiletriana/tactiletriana.config
@@ -1,6 +1,8 @@
-#Fri May 29 15:52:23 CEST 2015
-HOUSE_MAX_FUSE_CURRENT=105
+#Sat May 30 12:54:57 CEST 2015
 SIMULATION_UNCONTROLABLE_LOAD_ENABLED=true
+HOUSE_MAX_FUSE_CURRENT=105
+testValue2=abcdefg
 timescenario=2014-01-01,2014-12-31|
 TICK_MINUTES=5
 SYSTEM_TICK_TIME=200
+testValue=12345
