Eerste versie dag/nacht

--- a/tactiletriana/tactiletriana.config
+++ b/tactiletriana/tactiletriana.config
@@ -1,8 +1,8 @@
-#Sat May 30 13:47:46 CEST 2015
-testValue2=abcdefg
-HOUSE_MAX_FUSE_CURRENT=105
+#Sat May 30 15:31:10 CEST 2015
 SIMULATION_UNCONTROLABLE_LOAD_ENABLED=true
-timescenario=2014-01-01,2014-12-31|
+HOUSE_MAX_FUSE_CURRENT=105
+testValue2=abcdefg
+timescenario=2014-01-01,2014-01-01|2014-03-01,2014-03-01|2014-06-01,2014-06-01|2014-09-01,2014-09-01|
 TICK_MINUTES=5
 SYSTEM_TICK_TIME=200
 testValue=12345
