--- a/tactiletriana/tactiletriana.config
+++ b/tactiletriana/tactiletriana.config
@@ -1,22 +1,6 @@
-<<<<<<< HEAD
-#Wed May 27 13:31:53 CEST 2015
-SIMULATION_UNCONTROLABLE_LOAD_ENABLED=true
-HOUSE_MAX_FUSE_CURRENT=105
-timescenario=2014-01-01,2014-12-10|2014-12-11,2014-12-15|
-TICK_MINUTES=5
-SYSTEM_TICK_TIME=200
-=======
-#Mon Jun 08 18:49:20 CEST 2015
-SYSTEM_TICK_TIME=200
-HOUSE_MAX_FUSE_CURRENT=105
-timescenario=2014-01-01,2014-01-01|2014-03-01,2014-03-01|2014-06-01,2014-06-01|2014-09-01,2014-09-01|
->>>>>>>=7c33d9f766e9f2065f28dea30107297dfe87195b
-SIMULATION_UNCONTROLABLE_LOAD_ENABLED=true
-testValue2=abcdefg
-<<<<<<<=HEAD
-HOUSE_FUSE_MAX_CURRENT=105
-testValue=12345
+#Mon Jun 08 20:16:47 CEST 2015
 UNCONTROLLABLE_LOAD_ENABLED=true
+HOUSE_FUSE_MAX_CURRENT=105
+TIME_SCENARIOS=2014-01-01,2014-03-10|
 TICK_MINUTES=5
-=\=\=\=\=\=\=
->>>>>>> cdf10e0c2ccd90ce7bad6db2896c3b3eeba6b024
+SYSTEM_TICK_TIME=200
