--- a/tactiletriana/tactiletriana.config
+++ b/tactiletriana/tactiletriana.config
@@ -1,5 +1,6 @@
-#Wed Jun 10 17:14:47 CEST 2015
+#Wed Jun 10 21:36:29 CEST 2015
 UNCONTROLLABLE_LOAD_ENABLED=true
+EXTENDED_PARAMETERS=true
 HOUSE_FUSE_MAX_CURRENT=105
 TIME_SCENARIO=2014-01-01,2014-12-31|
 TICK_MINUTES=5
