Andere ConfigFiles kunnen nu geladen worden

--- a/tactiletriana/tactiletriana.config
+++ b/tactiletriana/tactiletriana.config
@@ -1,7 +1,9 @@
-#Wed Jun 10 21:36:29 CEST 2015
-UNCONTROLLABLE_LOAD_ENABLED=true
-EXTENDED_PARAMETERS=true
-HOUSE_FUSE_MAX_CURRENT=105
-TIME_SCENARIO=2014-01-01,2014-12-31|
-TICK_MINUTES=5
+#Fri Jun 12 19:12:30 CEST 2015
 SYSTEM_TICK_TIME=200
+EXTENDED_PARAMETERS=false
+TOUCH_SCREEN_ID=1
+HOUSE_FUSE_MAX_CURRENT=105
+TICK_MINUTES=5
+DETAIL_SCREEN_ID=1
+TIME_SCENARIO=2014-01-01,2014-12-31|
+FULLSCREEN=true
