--- a/tactiletriana/tactiletriana.config
+++ b/tactiletriana/tactiletriana.config
@@ -7,3 +7,4 @@ TICK_MINUTES=5
 DETAIL_SCREEN_ID=1
 TIME_SCENARIO=2014-01-01,2014-01-02|2014-04-01,2014-04-02|2014-07-01,2014-07-02|2014-10-01,2014-10-02
 FULLSCREEN=true
+UNCONTROLLABLE_LOAD_ENABLED=true
